# Complaint-Bot

./: .gitignore  README.md  bot.py  command.py  config.toml  main.py  module.py  pyproject.toml  requirements.txt  util.py
complaintbot/: __main__.py  bot.py  command.py  models.py  module.py  util.py
complaintbot/modules/: __init__.py  complaint.py  core.py  system.py
modules/: __init__.py  core.py  system.py
