[tool.poetry]
name = "complaintbot"
version = "0.1.0"
description = "Register complaints for TG communities."
authors = []

[tool.poetry.dependencies]
python = "^3.6"
aiofiles = "^0.5.0"
aiohttp = "^3.6.2"
async-timeout = "^3.0.1"
attrs = "^19.3.0"
chardet = "^3.0.4"
colorlog = "^4.1.0"
idna = "^2.10"
multidict = "^4.7.6"
pyaes = "^1.6.1"
pyasn1 = "^0.4.8"
rsa = "^4.6"
Telethon = "^1.14.0"
uvloop = "^0.14.0"
toml = "^0.10.1"
yarl = "^1.4.2"
sqlalchemy = "^1.3.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
